Working CORS + Authentication in the API
