# infrastructure-modules/api/provider/api.yaml
@@ -311,6 +311,8 @@ paths:
       produces:
       - application/json
       - application/xml
+      security:
+      - CognitoUserProvider: []
       parameters:
       - name: status
         in: query
@@ -360,6 +362,9 @@ paths:
             type: array
             items:
               $ref: '#/definitions/RecordMetadata'
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
         400:
           description: Invalid status value
       x-amazon-apigateway-integration:
@@ -370,6 +375,43 @@ paths:
         passthroughBehavior: "NEVER"
         httpMethod: "POST"
         type: "aws_proxy"
+    options:
+      summary: CORS support
+      description: |
+        Enable CORS by returning correct headers
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      tags:
+        - CORS
+      x-amazon-apigateway-integration:
+        type: mock
+        requestTemplates:
+          application/json: |
+            {
+              "statusCode" : 200
+            }
+        responses:
+          "default":
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Headers : "'Content-Type,X-Amz-Date,Authorization,X-Api-Key'"
+              method.response.header.Access-Control-Allow-Methods : "'*'"
+              method.response.header.Access-Control-Allow-Origin : "'*'"
+            responseTemplates:
+              application/json: |
+                {}
+      responses:
+        200:
+          description: Default response for CORS method
+          headers:
+            Access-Control-Allow-Headers:
+              type: "string"
+            Access-Control-Allow-Methods:
+              type: "string"
+            Access-Control-Allow-Origin:
+              type: "string"
   /provider/forms/country/{country}:
     get:
       tags:
@@ -507,6 +549,7 @@ definitions:
         type: string
       form_id:
         type: string
+  Empty: {}
   Form:
     type: object
     properties:
